<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:gravity="center|top">

    <EditText
        android:id="@+id/txt_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="text"
        android:layout_marginTop="100dp"
        android:hint="@string/Name" />

    <EditText
        android:id="@+id/txt_Family"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="text"
        android:hint="@string/Family" />

    <EditText
        android:id="@+id/txt_Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="number"
        android:hint="@string/Age" />

    <EditText
        android:id="@+id/txt_Mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/Mail" />

    <Button
        android:id="@+id/btn_Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"/>


</LinearLayout>